--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -211,6 +211,11 @@ agencies:
   - date: 2025-02-24
     event: A court ruling names the systems NSLDS, COD, FAS and FMS as being accessed by DOGE
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.38.0.pdf
+  - date: 2025-03-14
+    event: ProPublica reports Connor Fennessy is active at the Department of Education as a Senior Advisor
+    named:
+    - Connor Fennessy
+    source: https://projects.propublica.org/elon-musk-doge-tracker/#Conor-Fennessy
   systems:
   - name: Common Origination and Disbursement System
     acronym: COD
@@ -749,6 +754,11 @@ agencies:
   - date: 2025-02-19
     event: According to one agency employee, DOGE workers already have access to contracts, partnerships, performance reviews, classified national-security information, and satellite data, among other materials.
     source: https://www.theatlantic.com/technology/archive/2025/02/doge-god-mode-access/681719/
+  - date: 2025-03-14
+    event: ProPublica reports that Scott Coulter has "wide access to internal databases at NASA"
+    named:
+    - Scott Coulter
+    source: https://projects.propublica.org/elon-musk-doge-tracker/#Scott-Coulter
 
 - name: National Oceanic and Atmospheric Administration
   acronym: NOAA
