--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -1224,9 +1224,15 @@ agencies:
   - Cole Killian
   - Nikhil Rajpal
   events:
+  - date: 2024-12-30
+    event: Amy Gleason joins the USDS, according to her sworn testimony.
+    source: https://www.documentcloud.org/documents/25564597-crewvdogereconmot031425/
   - date: 2025-01-20
     event: An Inauguration Day executive order renames the USDS to the US Doge Service and implants the DOGE temporary organization inside of It
     source: https://www.whitehouse.gov/presidential-actions/2025/01/establishing-and-implementing-the-presidents-department-of-government-efficiency/
+  - date: 2025-01-20
+    event: USDS was transferred out of the Office of Management and Budget (OMB) and established a standalone office in the Executive Office of the President
+    source: https://www.documentcloud.org/documents/25564597-crewvdogereconmot031425/
   - date: 2025-01-21
     event: DOGE staff start screening all USDS staff in interviews, asking them their views of DOGE and who were underperformers who should be fired.
     named:
