--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -1052,7 +1052,7 @@ agencies:
     - Riccardo Biasini
     source: https://www.reuters.com/world/us/musk-aides-lock-government-workers-out-computer-systems-us-agency-sources-say-2025-01-31/
   - date: 2025-01-27
-    event: A memeber of the OPM union posts a Reddit message reportedly from an OPM employee stating that the email server is a piece of outside equipment and the goal is to generate lists of all govt employees to send massive firing notices later.
+    event: A member of the OPM union posts a Reddit message reportedly from an OPM employee stating that the email server is a piece of outside equipment and the goal is to generate lists of all govt employees to send massive firing notices later.
     named:
     - Amanda Scales
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.276820/gov.uscourts.dcd.276820.1.0.pdf
