Added details from some sworn declarations

--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -103,6 +103,11 @@ agencies:
   - date: 2025-02-18
     event: An employee requests to repair the CFPB homepage deleted by DOGE, but that action is refused by order of Vought
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.38.6.pdf
+  - date: 2025-03-05
+    event: Jordan Wick is formally onboarded as an employee of the CFPB (and not a DOGE detailee) and swears the Oath of Office
+    named:
+    - Jordan Wick
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.65.2.pdf
   systems:
   - name: HRConnect
     description: HR system for CFPB employees
@@ -379,6 +384,9 @@ agencies:
   - date: 2025-02-27
     event: U.S. District Judge John Bates orders that some DOGE officials should be required to testify under oath
     source: https://www.politico.com/news/2025/02/27/doge-depositions-union-lawsuits-00206542
+  - date: 2025-03-05
+    event: From this date, detailing arrangements for DOGE staff are between the target agency and other agencies hiring DOGE staff, according to a declaration made by DOGE in AFL-CIO et al vs. Department of Labor
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.51.1.pdf
   - date: 2025-03-10
     event: U.S. District Judge Christopher Cooper demands a rolling production of DOGE to produce documents in discovery within weeks
     source: https://www.politico.com/news/2025/03/10/judge-orders-doge-record-release-00223151
@@ -804,7 +812,13 @@ agencies:
 - name: Health and Human Services
   acronym: HHS
   people:
+  - Edward Coristine
+  - Marko Elez
   - Luke Farritor
+  - Aram Moghaddassi
+  - Rachel Riley
+  - Amy Gleason
+  - Brad Smith
   events:
   - date: 2025-01-24
     event: Trump fires the HHS Inspector General in a late-night purge
@@ -812,9 +826,28 @@ agencies:
   - date: 2025-03-03
     event: DOGE staff attempt to access "a system within a broader government database created to help enforce child support payments, which pulls a vast trove of information, including income data linked to nearly all workers"
     source: https://www.washingtonpost.com/business/2025/03/06/doge-hhs-ssa-data/
+  - date: 2025-03-04
+    event: Amy Gleason (purported head of DOGE) is formally onboarded at HHS as a Senior Advisor and swears the oath of office
+    named:
+    - Amy Gleason
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.65.1_1.pdf
+  - date: 2025-03-04
+    event: Brad Smith is formally onboarded at HHS as a Senior Advisor and swears the oath of office
+    named:
+    - Brad Smith
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.65.3.pdf
   - date: 2025-03-08
     event: DOGE staff are granted access to NDNH and objecting federal staff are "no longer with the agency"
     source: https://www.washingtonpost.com/business/2025/03/08/hhs-doge-child-support
+  - date: 2025-03-13
+    event: As later reported in a declaration in AFL-CIO et al. vs. Department of Labor, HHS employee Mark Samburg finds DOGE staff at the agency listed in an online directory as Executive Engineers (and Rachel Riley as a Senior Advisor)
+    named:
+    - Edward Coristine
+    - Marko Elez
+    - Luke Farritor
+    - Aram Moghaddassi
+    - Rachel Riley
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.4.pdf
   systems:
   - name: National Directory of New Hires
     acronym: NDNH
@@ -967,6 +1000,8 @@ agencies:
   acronym: NASA
   people:
   - Scott Coulter
+  - Riley Sennott
+  - Alexander Simonpour
   events:
   - date: 2025-02-14
     event: NASA administrator emails all staff to report that "DOGE has arrived"
@@ -979,6 +1014,13 @@ agencies:
     named:
     - Scott Coulter
     source: https://projects.propublica.org/elon-musk-doge-tracker/#Scott-Coulter
+  - date: 2025-03-14
+    event: A Business Insider article reports that Alexander Simonpour has shown up at NASA and also has a GSA address. Riley Sennott and Scott Coulter also are listed
+    named:
+    - Alexander Simonpour
+    - Riley Sennott
+    - Scott Coulter
+    source: https://www.businessinsider.com/tesla-employee-alexander-simonpour-nasa-doge-team-2025-3
 
 - name: National Oceanic and Atmospheric Administration
   acronym: NOAA
@@ -1301,6 +1343,9 @@ agencies:
     source: https://www.washingtonpost.com/documents/e08aeb0c-ec70-4235-91a0-290da92067b5.pdf?itid=lk_inline_manual_5
     named:
     - Akash Bobba
+  - date: 2025-02-13
+    event: According to a sworn declaration by a Deputy Commissioner at SSA, an unindentified DOGE staffer (Employee 1) is onboarded for "duties currently relate to improper payments and SSA's Death Master File" and they are also planning to detail him to the Small Business Administration
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   - date: 2025-02-14
     event: Leland Dudek is placed on administrative leave while under investigation that he committed inappropriate actions to help DOGE
     named:
@@ -1322,6 +1367,21 @@ agencies:
     source: https://www.washingtonpost.com/documents/e08aeb0c-ec70-4235-91a0-290da92067b5.pdf?itid=lk_inline_manual_5
     named:
     - Leland Dudek
+  - date: 2025-02-18
+    event: >
+      According to a sworn declaration by a Deputy Commissioner at SSA, "we began onboarding and training Employee 3, a Schedule C Policy Advisor, detailed from the Department of Labor to SSA" with it finalized on February 22. "His duties currently relate to improper payments and SSA’s Death Master File."
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
+  - date: 2025-02-18
+    event: According to a sworn declaration, "SSA began onboarding and training Employee 5, an engineer, detailed from the United States DOGE Service to SSA" with an inter-agency agreement to DOGE.
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
+  - date: 2025-02-18
+    event: According to a sworn declaration, SSA "began onboarding and training Employee 2, Senior Advisor (Program Specialist AD-0301-00). He is in the process of being detailed from National Aeronautics and Space Administration (NASA) to SSA."
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
+  - date: 2025-02-19
+    event: According to a sworn declaration, "Employee 10, a software engineer, was detailed from the Office of the Administrator at the General Services Administration to SSA" (possibly Ehtan Shaotran)
+    named:
+    - Ethan Shaotran
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   - date: 2025-02-20
     event: Several DOGE staffers at the agency are identified by Social Security Works (a nonprofit advocacy group) as also working at SSA
     source: https://www.thehandbasket.co/p/leland-dudek-ssa-doge
@@ -1331,6 +1391,12 @@ agencies:
     - Nikhil Rajpal
     - Cole Killian
     - Marko Elez
+  - date: 2025-02-26
+    event: According to a sworn declaration, "employee 8, an engineer, was detailed from Office of Personnel Management to SSA. His duties currently relate to improper payments and death data."
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
+  - date: 2025-02-27
+    event: According to a sworn declaration, "Employees 4, 6, and 9 were each appointed as an expert, special government employee"
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   - date: 2025-03-01
     event: In an email to staff, Dudek explains the disruptions by saying "elections have consequences"
     named:
@@ -1341,6 +1407,13 @@ agencies:
     source: https://www.washingtonpost.com/politics/2025/03/06/doge-is-driving-social-security-cuts-will-make-mistakes-acting-head-says-privately/
     named:
     - Leland Dudek
+  - date: 2025-03-05
+    event: According to a sworn declaration, "the agency began onboarding Employee 7, as a detailee from Department of Labor (DOL) to SSA."
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
+  - date: 2025-03-12
+    event: >
+      In a sworn declaration, Florence Felix-Lawson notes "the SSA DOGE Team currently consists of ten SSA employees: four SSA special government employees (Employees 1, 4, 6, and 9) and six detailees to SSA from other government agencies and offices (Employees 2, 3, 5, 7, 8, and 10)"
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   - date: 2025-03-12
     event: Multiple SSA employees told ProPublica, their tech systems seem to be crashing nearly every day, leading to more delays in serving beneficiaries.
     source: https://www.propublica.org/article/recording-reveals-leland-dudek-thoughts-trump-doge-social-security
